# miniguys

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
miniguys/: debug.c  debug.h  main.c  saske.c  saske.h  saske.test.c  saske.test.h  test.c  test.h
miniguys/config/: config.h
miniguys/delay/: delay.h
miniguys/delay/sdl/: sdl_delay.c
miniguys/event/: event.c  event.h
miniguys/game/: game.c  game.h
miniguys/input/: action.h  input.c  input.h  key.h
miniguys/math/: math.h  vec2f.c  vec2f.h
miniguys/player/: player.c  player.h  player_controller.c  player_controller.h  player_renderer.c  player_renderer.h
miniguys/renderer/: renderer.h  sprite.c  sprite.h  sprite.test.c  sprite.test.h
miniguys/renderer/player/: player_renderer.c  player_renderer.h
miniguys/renderer/sdl/: sdl_renderer.c  sdl_renderer.h  sdl_renderer.test.c  sdl_renderer.test.h
miniguys/time/: time.h
miniguys/time/sdl/: sdl_time.c
miniguys/timer/: timer.h
miniguys/timer/sdl/: sdl_timer.c
